--- a/cmd/web/resource/template/common/footer.tmpl
+++ b/cmd/web/resource/template/common/footer.tmpl
@@ -10,24 +10,36 @@
             <div class="col-6 col-md">
                 <h5>相关链接</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="https://git.cm/naiba/gocd" target="_blank">源代码</a></li>
-                    <li><span class="text-muted" data-toggle="tooltip" data-placement="top" title="欢迎加入QQ交流群：710012414">
-                        交流群
-                    </span></li>
+                    <li><a class="text-muted" href="https://git.cm/naiba/gocd" target="_blank">贡献代码</a></li>
+                    <li>
+                        <a class="text-muted" data-toggle="tooltip" data-placement="top" title="QQ群：710012414"
+                           target="_blank"
+                           href="//shang.qq.com/wpa/qunwpa?idkey=7675ced9ff354881807cf30a0de659e336fa0518ada51c125289d8ac6dda5bc2"><img
+                                border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="奶爸 · 大佬委员会"
+                                title="奶爸 · 大佬委员会"></a>
+                    </li>
                 </ul>
             </div>
             <div class="col-6 col-md">
-                <h5>欢迎贡献</h5>
+                <h5>赞助商</h5>
                 <ul class="list-unstyled text-small">
-                    <li><span class="text-muted">联系奶爸</span></li>
-                    <li><span class="text-muted">一起开车</span></li>
+                    <li><a href="http://m.im" rel="nofollow" target="_blank" class="text-muted"><img class="p-1"
+                                                                                                     width="100px"
+                                                                                                     src="/static/image/sponsor-m_im.png"
+                                                                                                     title="马克书签"></a>
+                    </li>
+                    <li><a href="http://www.sp9.com" rel="nofollow" target="_blank" class="text-muted"><img class="p-1"
+                                                                                                            width="100px"
+                                                                                                            src="/static/image/sponsor-sp9_com.png"
+                                                                                                            title="食佰秀"></a>
+                    </li>
                 </ul>
             </div>
             <div class="col-6 col-md">
-                <h5>作者</h5>
+                <h5>开发者</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">@ 奶爸</a></li>
-                    <li><a class="text-muted" href="#">待您加入</a></li>
+                    <li><a class="text-muted" href="https://git.cm/naiba" target="_blank">奶爸@Git.cm</a></li>
+                    <li><span class="text-muted">邀您加入</span></li>
                 </ul>
             </div>
         </div>
