--- a/cmd/web/resource/template/server/index.tmpl
+++ b/cmd/web/resource/template/server/index.tmpl
@@ -46,7 +46,7 @@
     </div>
 {{/*modal edit server END*/}}
     <div class="row">
-        <div class="col-4">
+        <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">添加服务器</h5>
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col-md-8">
             <div id="alertServerConfig" class="alert alert-warning" role="alert">
                 <h5 class="alert-heading">服务器配置</h5>
                 <p>您必须将下面的公钥添加到服务器的<code>/home/user/.ssh/authorized_keys</code>中</p>
