--- a/cmd/web/resource/template/common/footer.tmpl
+++ b/cmd/web/resource/template/common/footer.tmpl
@@ -28,12 +28,12 @@
             <div class="col-6 col-md">
                 <h5>赞助商</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a href="http://m.im" rel="nofollow" target="_blank" class="text-muted"><img class="p-1"
+                    <li><a href="http://m.im/?utm_source=naiba" rel="nofollow" target="_blank" class="text-muted"><img class="p-1"
                                                                                                      width="100px"
                                                                                                      src="/static/image/sponsor-m_im.png"
                                                                                                      title="马克书签"></a>
                     </li>
-                    <li><a href="http://www.sp9.com" rel="nofollow" target="_blank" class="text-muted"><img class="p-1"
+                    <li><a href="http://www.sp9.com/?utm_source=naiba" rel="nofollow" target="_blank" class="text-muted"><img class="p-1"
                                                                                                             width="100px"
                                                                                                             src="/static/image/sponsor-sp9_com.png"
                                                                                                             title="食佰秀"></a>
