--- a/cmd/web/resource/template/admin/user.tmpl
+++ b/cmd/web/resource/template/admin/user.tmpl
@@ -48,7 +48,24 @@
                     </tbody>
                 </table>
             </div>
+            <nav aria-label="用户分页">
+                <ul class="pagination">
+                    <li class="page-item{{if eq .currentPage 1}} disabled{{else if eq .currentPage 0}} disabled{{end}}">
+                        <a class="page-link" href="?page={{MathSub .currentPage 1}}" tabindex="-1">&laquo;</a>
+                    </li>
+                {{range $page := Pagination .allPage .currentPage}}
+                    <li class="page-item{{if .Current}} active{{end}}{{if eq .Text "..."}} disabled{{end}}"><a
+                            class="page-link"
+                            href="?page={{.No}}">{{.Text}}</a>
+                    </li>
+                {{end}}
+                    <li class="page-item{{if eq .currentPage .allPage}} disabled{{end}}">
+                        <a class="page-link" href="?page={{MathAdd .currentPage 1}}">&raquo;</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
+</div>
 {{template "common/footer" .}}
 {{end}}
