--- a/cmd/web/resource/template/pipelog/index.tmpl
+++ b/cmd/web/resource/template/pipelog/index.tmpl
@@ -40,6 +40,24 @@
             </tbody>
         </table>
     </div>
+{{if gt .allPage 0}}
+    <nav aria-label="部署日志分页">
+        <ul class="pagination">
+            <li class="page-item{{if eq .currentPage 1}} disabled{{end}}">
+                <a class="page-link" href="?page={{MathSub .currentPage 1}}" tabindex="-1">&laquo;</a>
+            </li>
+        {{range $page := Pagination .allPage .currentPage}}
+            <li class="page-item{{if .Current}} active{{end}}{{if eq .Text "..."}} disabled{{end}}"><a
+                    class="page-link"
+                    href="?page={{.No}}">{{.Text}}</a>
+            </li>
+        {{end}}
+            <li class="page-item{{if eq .currentPage .allPage}} disabled{{end}}">
+                <a class="page-link" href="?page={{MathAdd .currentPage 1}}">&raquo;</a>
+            </li>
+        </ul>
+    </nav>
+{{end}}
 </div>
 {{template "common/footer" .}}
 {{end}}
