add running status

--- a/cmd/web/resource/template/pipelog/index.tmpl
+++ b/cmd/web/resource/template/pipelog/index.tmpl
@@ -27,6 +27,8 @@
                     class="btn btn-danger btn-sm">Server</button>
                 {{else if eq $l.Status 3}}
                     class="btn btn-warning btn-sm">Exec</button>
+                {{else if eq $l.Status 4}}
+                    class="btn btn-primary btn-sm">Running</button>
                 {{else}}
                     class="btn btn-secondary btn-sm">None</button>
                 {{end}}
