--- a/cmd/web/resource/static/css/gocd.css
+++ b/cmd/web/resource/static/css/gocd.css
@@ -51,3 +51,17 @@ a:hover {
     background-color: #f8f9fa !important;
     border-color: rgba(0, 0, 0, .125);
 }
+
+.console {
+    background: black;
+    color: lightgreen;
+    padding: 10px;
+}
+
+.console .line-number {
+    color: white;
+}
+
+.console .code {
+    padding-left: 3px;
+}
