--- a/cmd/web/resource/template/pipelog/index.tmpl
+++ b/cmd/web/resource/template/pipelog/index.tmpl
@@ -21,16 +21,20 @@
                 <td style="min-width: 200px">{{$l.Pipeline.Name}}</td>
                 <td>
                 <button{{if eq $l.Status 1}}
-                class="btn btn-success btn-sm">Success
+                class="btn btn-success btn-sm">部署成功
                 </button>
                 {{else if eq $l.Status 2}}
-                    class="btn btn-danger btn-sm">Server</button>
+                    class="btn btn-dark btn-sm">服务器错误</button>
                 {{else if eq $l.Status 3}}
-                    class="btn btn-warning btn-sm">Exec</button>
+                    class="btn btn-danger btn-sm">脚本错误</button>
                 {{else if eq $l.Status 4}}
-                    class="btn btn-primary btn-sm">Running</button>
+                    class="btn btn-primary btn-sm">正在运行</button>
+                {{else if eq $l.Status 5}}
+                    class="btn btn-info btn-sm">人工停止</button>
+                {{else if eq $l.Status 6}}
+                    class="btn btn-warning btn-sm">执行超时</button>
                 {{else}}
-                    class="btn btn-secondary btn-sm">None</button>
+                    class="btn btn-secondary btn-sm">未知状态</button>
                 {{end}}
                 </td>
                 <td>{{$l.Pusher}}</td>
