fix human stop deploy

--- a/cmd/web/resource/template/admin/index.tmpl
+++ b/cmd/web/resource/template/admin/index.tmpl
@@ -11,7 +11,7 @@
                     欢迎您，{{.user.GName}}
                 </div>
                 <div class="card-body">
-                    欢迎来到管理面板，这里还没有想好要放什么。
+                    运行中的Goroutine：{{NumGoroutine}}
                 </div>
             </div>
         </div>
