--- a/cmd/web/resource/template/common/admin_sidebar.tmpl
+++ b/cmd/web/resource/template/common/admin_sidebar.tmpl
@@ -8,6 +8,8 @@
            class="list-group-item list-group-item-action{{if eq .router "/admin/"}} active{{end}}">控制面板</a>
         <a href="/admin/user/"
            class="list-group-item list-group-item-action{{if eq .router "/admin/user/"}} active{{end}}">用户管理</a>
+        <a href="/admin/running/"
+           class="list-group-item list-group-item-action{{if eq .router "/admin/running/"}} active{{end}}">部署管理</a>
     </div>
 </div>
 {{end}}
