--- a/cmd/web/resource/template/common/admin_sidebar.tmpl
+++ b/cmd/web/resource/template/common/admin_sidebar.tmpl
@@ -9,7 +9,7 @@
         <a href="/admin/user/"
            class="list-group-item list-group-item-action{{if eq .router "/admin/user/"}} active{{end}}">用户管理</a>
         <a href="/admin/running/"
-           class="list-group-item list-group-item-action{{if eq .router "/admin/running/"}} active{{end}}">部署管理</a>
+           class="list-group-item list-group-item-action{{if eq .router "/admin/running/"}} active{{end}}">正在部署</a>
     </div>
 </div>
 {{end}}
