--- a/cmd/web/resource/template/admin/user.tmpl
+++ b/cmd/web/resource/template/admin/user.tmpl
@@ -8,7 +8,7 @@
         <div class="col-md-9 pt-2">
             <div class="table-responsive">
                 <table class="table table-striped">
-                    <thead>
+                    <thead class="thead-light">
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">昵称</th>
