--- a/cmd/web/resource/template/admin/running.tmpl
+++ b/cmd/web/resource/template/admin/running.tmpl
@@ -14,8 +14,8 @@
                         <th scope="col">所属流程</th>
                         <th scope="col">状态</th>
                         <th scope="col">触发者</th>
-                        <th scope="col">触发时间</th>
-                        <th scope="col">部署时长</th>
+                        <th scope="col" style="min-width: 200px;">触发时间</th>
+                        <th scope="col" style="min-width: 100px;">部署时长</th>
                         <th scope="col">日志</th>
                     </tr>
                     </thead>
